# qdu_sentry

./: .gitignore  .gitmodules  debug.txt  lio.sh  map.sh  mapping.sh  nav.sh  referee.sh
src/rm_behavior/plugins/gimbalsend/: CMakeLists.txt  package.xml
src/rm_behavior/plugins/gimbalsend/config/: gimbalsend_params.yaml
src/rm_behavior/plugins/gimbalsend/launch/: gimbalsend.launch.py
src/rm_behavior/plugins/gimbalsend/src/: gimbalsend.cpp
src/rm_behavior/plugins/lidarscan/: CMakeLists.txt  package.xml
src/rm_behavior/plugins/lidarscan/config/: lidarscan.yaml
src/rm_behavior/plugins/lidarscan/launch/: lidarscan.launch.py
src/rm_behavior/plugins/lidarscan/src/: lidarscan.cpp  pc_process.cpp
src/rm_behavior/rm_behavior/: CMakeLists.txt
src/rm_behavior/rm_behavior/behavior_trees/: 233.xml  base_behavior.xml  behavior.xml  herofollow.xml  models.xml  rm_behavior.xml
src/rm_behavior/rm_behavior/params/: rm_behavior.yaml
src/rm_behavior/rm_behavior/src/: rm_behavior_server.cpp
src/rm_navigation/: README.md
src/rm_navigation/livox_ros_driver2/: CMakeLists.txt  README.md
src/rm_navigation/nav_plugins/pcd2pgm/: README.md  package.xml
src/rm_navigation/nav_plugins/pcd2pgm/config/: pcd.yaml
src/rm_navigation/nav_plugins/pcd2pgm/src/: pcd2pgm.cpp
src/rm_navigation/rm_navigation/src/: CMakeLists.txt
src/rm_navigation/rm_navigation/src/launch/: bringup_launch.py  localization_launch.py  slam_launch.py
src/rm_navigation/rm_navigation/src/map/: 1f.yaml  306.pgm  306.yaml  blueall.pgm  blueall.yaml  cir.pgm  cir.yaml  corridor.pgm  corridor.yaml  firstfloor.pgm  firstfloor.yaml  map.pgm  room.pgm  room.yaml  taijie.pgm  taijie.yaml  under.pgm  under.yaml  yuanzi.pgm
src/rm_navigation/rm_navigation/src/params/: mapper_params_online_async.yaml  nav2_params.yaml
src/rm_navigation/rm_navigation/src/rviz/: nav2_default_view.rviz
src/rm_navigation/rm_perception/fast_lio/: CMakeLists.txt
src/rm_navigation/rm_perception/fast_lio/Log/: mat_pre.txt
src/rm_navigation/rm_perception/fast_lio/PCD/: README.md  p'c'd.txt
src/rm_navigation/rm_perception/fast_lio/config/: mid360.yaml
src/rm_navigation/rm_perception/fast_lio/rviz/: fastlio.rviz
src/rm_navigation/rm_perception/fast_lio/src/: laserMapping.cpp
src/rm_navigation/rm_perception/pointcloud_to_laserscan/launch/: pointcloud_to_laserscan_launch.py
src/rm_navigation/rm_perception/pointcloud_to_laserscan/src/: laserscan_to_pointcloud_node.cpp
src/rm_navigation/rm_perception/pointlio/loam_interface/: package.xml
src/rm_navigation/rm_perception/pointlio/sensor_scan_generation/: package.xml
src/rm_navigation/rm_perception/terrain_analysis/: CMakeLists.txt  package.xml
src/rm_navigation/rm_perception/terrain_analysis/launch/: terrain_analysis_launch.py
src/rm_navigation/rm_perception/terrain_analysis/src/: terrain_analysis.cpp
src/rm_vision/: README.md
src/rm_vision/rm_auto_aim/armor_detector/: CMakeLists.txt  package.xml
src/rm_vision/rm_auto_aim/armor_detector/include/armor_detector/: detector_node.hpp  pnp_solver.hpp
src/rm_vision/rm_auto_aim/armor_detector/src/: detector.cpp  detector_node.cpp
src/rm_vision/rm_auto_aim/armor_executor/: CMakeLists.txt
src/rm_vision/rm_auto_aim/armor_executor/src/: SolveTrajectory.cpp
src/rm_vision/rm_auto_aim/armor_tracker/: CMakeLists.txt  README.md  package.xml
src/rm_vision/rm_auto_aim/armor_tracker/src/: tracker_node.cpp
src/rm_vision/rm_auto_aim/auto_aim_interfaces/: CMakeLists.txt
src/rm_vision/rm_description/: CMakeLists.txt  package.xml
src/rm_vision/rm_description/config/: camera_info.yaml  launch_params.yaml  node_params.yaml
src/rm_vision/rm_description/launch/: robot_description.launch.py
src/rm_vision/rm_description/urdf/: sentry.urdf.xacro
src/rm_vision/rm_serial_driver/: package.xml
src/rm_vision/rm_serial_driver/config/: serial_driver.yaml
src/rm_vision/rm_serial_driver/src/: crc.cpp  rm_serial_driver.cpp
src/rm_vision/rm_vision_bringup/config/: camera_info.yaml  camera_info_1.yaml  camera_info_3.yaml  camera_info_4.yaml  launch_params.yaml  node_params.yaml
src/rm_vision/rm_vision_bringup/launch/: common.py
src/rm_vision/ros2_hik_camera/config/: camera_params.yaml
src/rm_vision/rosbag2_composable_recorder/launch/: recorder.launch.py
(+28 files in other folders)
